--- a/index.html
+++ b/index.html
@@ -5,12 +5,43 @@
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
-
-<h1>Hello world!</h1>
-<div><img src="img_hello_world.jpg" alt="Hello World from Space"
-style="width:100%;max-width:960px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-
+<label>Full Name</label>
+<input type="text" id="name" name="full name" placeholder="Full name">
+<h1>Muthukumar Saravanan is user name of this branch and repository</h1>
+<!-- <input type="text" id="number" name="phone number" placeholder=" phonenumber"> --> -->
+<!-- <input type="text" id="email"> -->
+<button onclick="myclick()">submit</button>
+<script>
+    function myclick()
+    {
+         var fullname = document.getElementById("name").value;
+        // var phonenumber = document.getElementById("number").value;
+        // var email = document.getElementById("email").value;
+        // var emailpattern = /\S+@\S+\.com|edu/;
+        var pattern = /^(?!\s)[0-9a-zA-Z_\s-]*$/;
+        var pattern1 = /^(?!\s)M[r|rs|s]*\s[a-zA-Z\s_]*$/
+        // var phone = /^[+]?[0-9]{2}[-]?[0-9]{10}$/g;
+        // var numbertest = phonenumber.match(phone);
+        var test = fullname.match(pattern1);
+        // var emailtest = email.match(emailpattern);
+         console.log(test);
+        // console.log(numbertest);
+        // console.log(emailtest);
+        if(test )
+        {
+            console.log(fullname);  
+            // console.log(phonenumber);  
+            // console.log(emailtest);
+        }
+        else
+        {
+            console.log("This is "+fullname);
+            // console.log("This is "+phonenumber);
+            // console.log("this is not "+emailtest);
+        }
+       ///^\s|s+$/
+    }
+    
+</script>
 </body>
 </html>
