--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 <label>Full Name</label>
 <input type="text" id="name" name="full name" placeholder="Full name">
+    <h2>This is Muthukumar Saravanan </h1>
 <!-- <input type="text" id="number" name="phone number" placeholder=" phonenumber"> --> -->
 <!-- <input type="text" id="email"> -->
 <button onclick="myclick()">submit</button>
